Hw3 corrected